-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.3, Qt Creator 12.0.0-beta1
-
None
-
Windows 10 22H2 host
-
99c749043 (12.0)
Steps to reproduce
- Create a new Qt Widgets Application
- Select a remote Linux kit (tested with a Boot2Qt 6.5.3 kit for Raspberry Pi 4 64-bit)
- Build and run the project on the remote device
- Disconnect/switch off the remote device
- Click "Stop running the program"
Expected outcomes
- After Step #5, Qt Creator continues to respond to user events (like resizing the window)
- There should be a timeout on the attempt to stop the program
Actual outcomes
Qt Creator becomes unresponsive forever
- relates to
-
QTCREATORBUG-29889 Qt Creator unresponsive when Boot2Qt target disconnected while running
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-29788 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 513885,5 | SshProcessInterface: Ensure non-zero PID when destructing | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |