SshProcessInterface: Ensure non-zero PID when destructing

Fixes: QTCREATORBUG-29788
Change-Id: Ia906469526ebeaea6421f1f27a74e66d59bcaea3
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>