src/plugins/remotelinux/linuxdevice.cpp
@@ -427,7 +427,7 @@ void SshProcessInterface::emitStarted(qint64 processId)
 
 void SshProcessInterface::killIfRunning()
 {
-    if (d->m_killed || d->m_process.state() != QProcess::Running)
+    if (d->m_killed || d->m_process.state() != QProcess::Running || d->m_processId == 0)
         return;
     sendControlSignal(ControlSignal::Kill);
     d->m_killed = true;
@@ -449,9 +449,12 @@ bool SshProcessInterface::runInShell(const CommandLine &command, const QByteArra
     process.setCommand(cmd);
     process.setWriteData(data);
     process.start();
-    bool isFinished = process.waitForFinished(2000); // TODO: it may freeze on some devices
-    // otherwise we may start producing killers for killers
-    QTC_CHECK(isFinished);
+    bool isFinished = process.waitForFinished(2000); // It may freeze on some devices
+    if (!isFinished) {
+        Core::MessageManager::writeFlashing(tr("Can't send control signal to the %1 device. "
+                                               "The device might have been disconnected.")
+                                                .arg(d->m_device->displayName()));
+    }
     return isFinished;
 }
 
